[package]
name = "proto-packet-cli"
version = "0.0.0"
description = "This repository provides the ProtoPacket command line utility."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet-cli"
homepage = "https://github.com/nikdeapen/proto-packet-cli"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
lex = { git = "https://github.com/nikdeapen/lex.git" }
